superkube/modules/nav.scss
// =Nav
.nav {
    // colors
    --nav-link-color: var(--palette-black);
    --nav-link-background-color: var(--palette-transparent);
    --nav-link-hover-color: var(--palette-black-60);
    --nav-link-hover-background-color: var(--palette-transparent);
    --nav-link-active-color: var(--palette-black-40);
    --nav-link-active-background-color: var(--palette-transparent);

    // vars
    --nav-font-size: var(--type-scale-14);
    --nav-item-space: 6rem;
    --nav-link-padding: 0;
    --nav-link-border-radius: 0;

    // props
    font-size: var(--nav-font-size);

    .nav-list {
        display: flex;
        align-items: center;
    }
    .nav-item {
        display: flex;
        align-items: center;
        margin-right: var(--nav-item-space);
    }
    .nav-item.active .nav-link {
        cursor: text;
        text-decoration: none;
        color: var(--nav-link-active-color);
        background-color: var(--nav-link-active-background-color);
    }
    .nav-link {
        display: flex;
        align-items: center;
        white-space: nowrap;
        text-decoration: none;
        line-height: 1;
        padding: var(--nav-link-padding);
        border-radius: var(--nav-link-border-radius);
        color: var(--nav-link-color);
        background-color: var(--nav-link-background-color);
    }
    .nav-link:hover {
        text-decoration: underline;
        color: var(--nav-link-hover-color);
        background-color: var(--nav-link-hover-background-color);
    }
}
// Scales
.nav-small {
    --nav-font-size: var(--type-scale-13);
}

// Variants
.nav-semibold {
    .nav-link {
        font-weight: 600;
    }
}
.nav-strong {
    .nav-link {
        font-weight: bold;
    }
}

// Underline
.nav-underline {
    .nav-link {
        text-decoration: underline;
    }
}
.nav-underline-off {
    .nav-link:hover {
        text-decoration: none;
    }
}

// Pills
.nav-pills {
    --nav-link-color: var(--palette-black);
    --nav-link-hover-background-color: var(--palette-black-10);
    --nav-link-active-color: var(--palette-neutral-lightest);
    --nav-link-active-background-color: var(--palette-black);
    --nav-item-space: 1rem;
    --nav-link-padding: 7px 16px;
    --nav-link-border-radius: 99px;

    .nav-link:hover {
        text-decoration: none;
    }
}

// Tabs
.nav-tabs {
    --nav-border-color: var(--palette-black-10);
    --nav-border-width: 2px;
    --nav-item-space: 1px;
    --nav-link-padding: 12px 12px 10px 12px;
    --nav-link-color: var(--palette-black-50);
    --nav-link-border-color: var(--palette-transparent);
    --nav-link-background-color: var(--palette-transparent);
    --nav-link-hover-color: var(--palette-black);
    --nav-link-hover-border-color: var(--palette-black);
    --nav-link-hover-background-color: var(--palette-neutral-lightest);
    --nav-link-active-color: var(--palette-black);
    --nav-link-active-border-color: var(--palette-black);
    --nav-link-active-background-color: var(--palette-transparent);

    .nav-list {
        border-bottom-width: var(--nav-border-width);
        border-bottom-style: solid;
        border-bottom-color: var(--nav-border-color);
    }
    .nav-item.active .nav-link {
        border-bottom-color: var(--nav-link-active-border-color);
    }
    .nav-link {
        border-bottom-width: var(--nav-border-width);
        margin-bottom: calc(var(--nav-border-width)*-1);
        border-bottom-style: solid;
        border-bottom-color: var(--nav-link-border-color);
    }
    .nav-link:hover {
        text-decoration: none;
        border-bottom-color: var(--nav-link-hover-border-color);
    }
}

// Centered
.nav-centered {
    // vars
    --nav-item-space: 3rem;

    // props
    flex: 1 1 auto;

    .nav-list {
        justify-content: center;
    }
    .nav-item {
        margin-left: var(--nav-item-space);
        margin-right: var(--nav-item-space);
    }
}
.nav-centered.nav-pills {
    --nav-item-space: 0.5rem;
}
.nav-centered.nav-tabs {
    --nav-item-space: 1px;
}

// Right
.nav-right {
    .nav-item {
        margin-left: var(--nav-item-space);
        margin-right: 0;
    }
}
.nav-right.nav-tabs {
    --nav-item-space: 1px;

    .nav-item {
        margin-left: 0;
        margin-right: var(--nav-item-space);
    }
    .nav-item:last-child {
        margin-right: 0;
    }
}
.nav-right.nav-pills {
    --nav-item-space: 1rem;

    .nav-item {
        margin-left: var(--nav-item-space);
        margin-right: 0;
    }
}

// Full
.nav-full {
    flex: 1;

    .nav-item {
        flex: 1;
        justify-content: center;
        margin-left: 0;
        margin-right: 0;
    }
    .nav-link {
        flex: 1;
        justify-content: center;
    }
}

// Colors
.nav-primary {
    --nav-link-color: var(--palette-primary-dark);
    --nav-link-hover-color: var(--palette-primary-darker);
    --nav-link-active-color: var(--palette-black-40);
}
.nav-light {
    --nav-link-color: var(--palette-white-80);
    --nav-link-hover-color: var(--palette-white);
    --nav-link-active-color: var(--palette-white-50);
}
.nav-muted {
    --nav-link-color: var(--palette-black-60);
    --nav-link-hover-color: var(--palette-black);
    --nav-link-active-color: var(--palette-black);
}


//Responsive
@include for-sm {
    .nav-overflow-sm {
        overflow-y: hidden;
        overflow-x: auto;
        white-space: nowrap;
    }
    .nav-menu-sm {
        --nav-menu-item-space: 2rem;

        .nav-list {
            flex-direction: column;
            align-items: stretch;
        }
        .nav-item {
            margin-left: 0;
            margin-right: 0;
            margin-top: var(--nav-menu-item-space);
            margin-bottom: var(--nav-menu-item-space);
        }
        .nav-link {
            flex: 1;
            justify-content: flex-start;
        }
    }
    .nav-menu-sm.nav-pills {
        .nav-item {
            margin-top: 1px;
            margin-bottom: 1px;
        }
    }
    .nav-menu-sm.nav-tabs {
        .nav-list,
        .nav-link {
            border: none;
        }
        .nav-item {
            margin-top: 1px;
            margin-bottom: 1px;
        }
    }
    .nav-uncentered-sm {
        flex: 0;
        .nav-list {
            justify-content: flex-start;
        }
    }
}

